# remotevault

./: .gitignore  CLAUDE.md  index.html  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
scripts/: check-file-sizes.sh  check-no-slop.sh
src/: App.test.tsx  App.tsx  IconSprite.tsx  env.d.ts  index.tsx  routes.test.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs  workspace.rs
src-tauri/src/crypto/: mod.rs  tests.rs
src-tauri/src/db/: connections.rs  migrations.rs  mod.rs  models.rs  tests.rs  workspace.rs
src-tauri/src/workspace/: mod.rs  tests.rs
src/assets/: base.css  components.css  fonts.css  pages.css  styles.css  tokens.css  utilities.css
src/components/: Banner.tsx  Btn.test.tsx  Btn.tsx  Card.tsx  Chip.tsx  ConflictModal.tsx  FilterChip.test.tsx  FilterChip.tsx  FormField.test.tsx  FormField.tsx  Icon.tsx  Modal.test.tsx  Modal.tsx  Pill.tsx  PillGrid.tsx  ProtoIcon.tsx  SessionTabs.tsx  Sidebar.test.tsx  Sidebar.tsx  Steps.tsx  StrengthMeter.tsx  Tag.tsx  Toggle.tsx  Topbar.tsx  TopbarContext.tsx  VaultPicker.tsx
src/lib/: theme.test.ts  theme.ts
src/pages/: ConnectionEditPage.test.tsx  ConnectionEditPage.tsx  ConnectionsPage.test.tsx  ConnectionsPage.tsx  DevicesPage.tsx  ProviderSetupPage.test.tsx  ProviderSetupPage.tsx  SecurityPage.tsx  SessionPage.test.tsx  SessionPage.tsx  SettingsPage.tsx  SyncPage.tsx  VaultCreatePage.test.tsx  VaultCreatePage.tsx  VaultEditPage.test.tsx  VaultEditPage.tsx  VaultLockedPage.test.tsx  VaultPage.tsx  (+4 more)
(+1 files in other folders)
