[package]
name = "remotevault"
version = "0.1.0"
edition = "2021"

[lib]
name = "remotevault_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rand = "0.10.1"
russh = "0.61.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
